--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <!-- Disable zooming: -->
-<meta name="viewport" content="width=device-width, initial-scale=1.25, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.25, user-scalable=yes">
 
 <head>
     <!-- change this to your project name -->
