--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8" />
   <link data-trunk rel="css" href="/public/tailwind.css">
+  <link data-trunk rel="copy-dir" href="/public/maps/">
+
 
 </head>
 <body>
